tests/semantic/pass/struct_forward_declaration_in_main.c
int main(void) {
   struct S *s;
   return 0;
}

