tests/semantic/fail/compare_pointers4.c
struct S {int i;};
struct T {int i;};

int main(void) {
  struct S* s;
  struct T* t;
  if (s != t) {
    return 0;
  }
  return 0;
}
